@@ -1,3 +1,8 @@
+2007-03-11  Dušan Hokův  <dusan@mirc.cz>
+
+	* src/gnome-cmd-main-win.cc:
+	Made i18n for toolbar tips working again
+
 2007-03-06  Piotr Eljasiak  <epiotr@use.pl>
 
 	* po/POTFILES.in:
